@@ -17,7 +17,7 @@
   |          Dmitry Stogov <dmitry@zend.com>                             |
   +----------------------------------------------------------------------+
 */
-/* $Id: php_http.c,v 1.55.2.19 2005/07/08 09:36:42 dmitry Exp $ */
+/* $Id: php_http.c,v 1.55.2.20 2005/09/16 15:48:51 dmitry Exp $ */
 
 #include "php_soap.h"
 #include "ext/standard/base64.h"
@@ -428,6 +428,10 @@ try_again:
 			smart_str_appendc(&soap_headers, '?');
 			smart_str_appends(&soap_headers, phpurl->query);
 		}
+		if (phpurl->fragment) {
+			smart_str_appendc(&soap_headers, '#');
+			smart_str_appends(&soap_headers, phpurl->fragment);
+		}
 		smart_str_append_const(&soap_headers, " HTTP/1.1\r\n"
 			"Host: ");
 		smart_str_appends(&soap_headers, phpurl->host);
@@ -583,6 +587,10 @@ try_again:
 					if (phpurl->query) {
 						smart_str_appendc(&soap_headers, '?');
 						smart_str_appends(&soap_headers, phpurl->query);
+					}
+					if (phpurl->fragment) {
+						smart_str_appendc(&soap_headers, '#');
+						smart_str_appends(&soap_headers, phpurl->fragment);
 					}
 					if (zend_hash_find(Z_ARRVAL_PP(digest), "qop", sizeof("qop"), (void **)&tmp) == SUCCESS &&
 					    Z_TYPE_PP(tmp) == IS_STRING) {
